# RetroPascal

./: CMakeLists.txt  Makefile  README.md  pascal_graphics.h  pascal_ide.cpp  pascal_interpreter.cpp  turbo_pascal_ide.cpp
examples/: bouncingball.pas  fact.pas  fibonacci.pas  mandelbrot.pas  objtest.pas  pets.pas  rectest.pas  snake.pas  stars.pas  startrek.pas  sudoku.pas
